# 3oCSI

./: .gitignore  .gitmodules  README.md
S1/DDSI/Seminario_1/: ejemplo.py  logfile
S1/DDSI/Seminario_1/pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
S1/DDSI/Seminario_1/pgdata/base/1/: 112  1247_vm  12525_vm  12534  12535  2579  2603_vm  2608_vm  2616_vm  2651  2654  2663  2670  2674  2678  2683  2696  2831  2835  2838  2996  3079_vm  3351  3599  3601_vm  3604  3606  3609  4162  5002  549  6112  pg_internal.init
S1/DDSI/Seminario_1/pgdata/base/12674/: 12510_vm  12520  12544  1259  2602_vm  2606  2606_vm  2608  2610_vm  2615  2618_vm  2659  2673  2686  2701  2756  2833  2840  3502  3503  3542  3574  3602  4148  4150  4160  4172  4174  6111  pg_internal.init
S1/DDSI/Seminario_1/pgdata/base/12675/: 1247  1249  12515  12530  12535_vm  12539  1259  1259_vm  2187  2337  2579  2606  2606_vm  2608  2610  2615_vm  2617_vm  2619_vm  2620  2650  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2685  2689  2699  2701  2702  2703  2704  2754  (+11 more)
S1/DDSI/Seminario_1/pgdata/base/16385/: 1249  1249_vm  12514  12520_vm  12524  1255_vm  2609  2609_vm  2610  2612  2653  2655  2658  2661  2665  2668  2675  2679  2680  2687  2699  2704  2757  2841  3080  3081  3257  3433  3455  3456_vm  3467  3541_vm  3600  3602_vm  3607  3764  4146  4152  4164  4166  (+3 more)
S1/DDSI/Seminario_1/pgdata/base/16386/: 113  1247  1247_vm  1249  1249_vm  1259  16387  16390  16392  16395  175  2579  2600_vm  2605_vm  2606  2608  2608_vm  2610  2610_vm  2618  2619  2620  2652  2656  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2684  2690  2691  2692  (+21 more)
S1/DDSI/Seminario_1/pgdata/base/24576/: 1247  1247_vm  1249  1249_vm  12510  12525  12530_vm  1255  1259  1259_vm  174  24602  24605  24610  24615  2579  2601_vm  2606  2607_vm  2608  2610  2612_vm  2619_fsm  2620  2658  2659  2660  2662  2663  2664  2665  2666  2667  2669  2673  2674  2678  2679  2681  2682  (+19 more)
S1/DDSI/Seminario_1/pgdata/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2967  4061  4176  4178  4180  4182  4184  4186  6001  6114  6115  pg_control  pg_internal.init
S1/DDSI/Seminario_1/pgdata/pg_stat_tmp/: db_0.stat  db_1.stat  db_12674.stat  db_12675.stat  db_24576.stat  global.stat
S1/DDSI/Seminario_1/pgdata/pg_xact/: 0000
S1/DDSI/seminario 2/banco/: __init__.py  db.py  movimientos.py  schema.sql
S1/DDSI/seminario 2/banco/templates/: base.html
S1/DDSI/seminario 2/banco/templates/movimientos/: create.html  index.html
S1/DDSI/seminario 2/flaskr/: __init__.py  readme.txt
S1/FR/S4/: clienteTCP.py  clienteUPD.py  cliente_fallos.py  cliente_minus.py  servidorTCP.py  servidorUPD.py  servidor_fallos.py  servidor_minus.py  servidor_web.py
S1/IG/FINAL/: README.md  makefile  objetos_B3.cc  objetos_B3.h  objetos_final.cc  objetos_final.hh  practica_final  practica_final.cc  practica_objetos_B3  practica_objetos_B3.cc
S1/IG/P0/Práctica_0/: practica_0  practica_0.cpp
S1/IG/P1/Práctica_1/: objetos_B.cc  objetos_B.h  practica1_B  practica1_B.cc
S1/IG/P2/practica2/: copa.blend  copa.ply  copa_loca.blend  copa_loca.blend1  copa_loca.ply  espiral_loca.blend  espiral_loca.blend1  espiral_loca.ply  objetos_B2.cc  objetos_B2.h  perfil.ply  pino.blend  pino.blend1  pino.ply  practica_objetos_B2  practica_objetos_B2.cc
S1/IG/P3/: P3 - Marco Girela Vida.xmind  README.md  ideas.md  objetos_B3.cc  objetos_B3.h  practica_objetos_B3  practica_objetos_B3.cc
S1/IG/P3_base/: objetos_B3.cc  practica_objetos_B3
S1/IG/P3_ejemplo/: practica_objetos_B3
S1/IG/P4/: makefile  objetos_B3.cc  objetos_B3.h  practica_objetos_B3  practica_objetos_B3.cc
S1/MC/: notas.md
S1/MC/P1/: CMakeLists.txt
S1/MC/P1/canciones/: canciones_juntas_audacity.aup3
S1/MC/P1/gramaticas/: lexer.l  parser.y  parser.yy  tokenizador.l
S1/MC/P1/include/: compilador.hh  compilador.hpp  interprete.hh  tokenizador.hh  tokenizador_wav.hpp  utils.hh  utils.hpp
S1/MC/P1/otros/: mi_asdl.md
S1/MC/P1/otros/ejemplo_internet/: README.md
S1/MC/P1/src/: compilador.cc  interprete.cc  main.cc  tokenizador_wav.cc
S1/MC/P1/test/: fuente.marco  test.cc
S1/MC/P1/test/data/: algoritmo_genetico.cc  fuente.marco
S1/MC/P1_fallida_buscador_plagios/src/: buscador_plagios.l
